--- a/about-us.html
+++ b/about-us.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-    <title>Flooring Company WordPress Theme – Just another WordPress site</title>
+    <title>AlfaSuportel</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,800">
     <link rel="stylesheet" href="stylesheets/owl.carousel.css">
     <link rel="stylesheet" href="stylesheets/owl.theme.css">
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="stylesheets/font-awesome/font-awesome.min.css">
     <link rel="stylesheet" href="stylesheets/app.css">
     <link rel="stylesheet" href="stylesheets/custom-style.css">
+    <link rel="icon" href="images/logo/logo-site-1.png" width="140" height="140">
   </head>
   <body>
 
@@ -25,7 +26,7 @@
             <li class="name">
               <h1>
                 <a title="Flooring Company WordPress Theme" rel="home" href="index.html">
-                  <img alt="logo" src="images/logo-white.png">
+                  <img alt="logo" src="images/logo/logo-site-1.png">
                 </a>
               </h1>
             </li>
@@ -37,56 +38,55 @@
             <div class="menu-main-menu-container">
               <ul id="menu-main-menu" class="menu">
                 <li id="menu-item-1324">
-                  <a href="index.html" class="has-icon">Home</a>
+                  <a href="index.html" class="has-icon">INICIO</a>
                 </li>
                 <li id="menu-item-1295" class="has-dropdown not-click">
-                  <a href="#" class="has-icon">pages</a>
-                  <ul class="sub-menu dropdown"><li class="title back js-generated"><h5><a href="javascript:void(0)">Back</a></h5></li><li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="#">pages</a></li>
+                  <a href="#" class="has-icon">PAGINAS</a>
+                  <ul class="sub-menu dropdown"><li class="title back js-generated"><h5><a href="javascript:void(0)">Voltar</a></h5></li><li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="#">paginas</a></li>
                     <li id="menu-item-1309">
-                      <a href="about-us.html" class="has-icon">About Us</a>
+                      <a href="about-us.html" class="has-icon">QUEM SOMOS</a>
                     </li>
                     <li id="menu-item-1313">
-                      <a href="services.html" class="has-icon">Services</a>
+                      <a href="services.html" class="has-icon">Serviços</a>
                     </li>
                   </ul>
                 </li>
                 <li id="menu-item-1299" class="has-dropdown not-click">
-                  <a href="#" class="has-icon">Portfolio</a>
+                  <a href="#" class="has-icon">Catalogo</a>
                   <ul class="sub-menu dropdown">
-                    <li class="title back js-generated"><h5><a href="javascript:void(0)">Back</a></h5></li><li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="#">Portfolio</a></li>
+                    <li class="title back js-generated"><h5><a href="javascript:void(0)">Voltar</a></h5></li><li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="#">Catalogo</a></li>
                     <li id="menu-item-1300" class="has-dropdown not-click">
-                      <a href="#" class="has-icon">Style I</a>
-                      <ul class="sub-menu dropdown"><li class="title back js-generated"><h5><a href="javascript:void(0)">Back</a></h5></li><li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="#">Style I</a></li>
+                      <a href="#" class="has-icon">Estilo I</a>
+                      <ul class="sub-menu dropdown"><li class="title back js-generated"><h5><a href="javascript:void(0)">Voltar</a></h5></li><li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="#">Estilo I</a></li>
                         <li id="menu-item-1317">
-                          <a href="portfolio-columns.html" class="has-icon">Portfolio columns</a>
+                          <a href="portfolio-columns.html" class="has-icon">Catalogo colunas</a>
                         </li>
                         <li id="menu-item-1316">
-                          <a href="portfolio-three-columns.html" class="has-icon">Portfolio three columns</a>
+                          <a href="portfolio-three-columns.html" class="has-icon">Catalogo 3 colunas</a>
                         </li>
                         <li id="menu-item-1315">
-                          <a href="portfolio-two.html" class="has-icon">Portfolio Two Columns</a>
+                          <a href="portfolio-two.html" class="has-icon">Catalogo 2 Columns</a>
                         </li>
                       </ul>
                     </li>
                     <li id="menu-item-1301" class="has-dropdown not-click">
-                      <a href="#" class="has-icon">Style II</a>
-                      <ul class="sub-menu dropdown"><li class="title back js-generated"><h5><a href="javascript:void(0)">Back</a></h5></li><li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="#">Style II</a></li>
+                      <a href="#" class="has-icon">Estilo II</a>
+                      <ul class="sub-menu dropdown"><li class="title back js-generated"><h5><a href="javascript:void(0)">Back</a></h5></li><li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="#">Estilo II</a></li>
                         <li id="menu-item-1319">
-                          <a href="portfolio-style-ii-two-columns.html" class="has-icon">Portfolio Style II Two Columns</a>
+                          <a href="portfolio-style-ii-two-columns.html" class="has-icon">Catalogo Estilo II Two colunas</a>
                         </li>
                         <li id="menu-item-1320">
-                          <a href="portfolio-style-ii-three-columns.html" class="has-icon">Portfolio Style II Theree Columns</a>
+                          <a href="portfolio-style-ii-three-columns.html" class="has-icon">Catalogo Estilo II Theree colunas</a>
                         </li>
                         <li id="menu-item-1321">
-                          <a href="portfolio-style-2-four-columns.html" class="has-icon">Portfolio Style II Four Columns</a>
-                        </li>
-                      </ul>
+                          <a href="portfolio-style-2-four-columns.html" class="has-icon">Catalogo Estilo II Four colunas</a>
+                        </licolunas                      </ul>
                     </li>
                     <li id="menu-item-1302" class="has-dropdown not-click">
-                      <a href="#" class="has-icon">Single portfolio</a>
-                      <ul class="sub-menu dropdown "><li class="title back js-generated"><h5><a href="javascript:void(0)">Back</a></h5></li><li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="#">Single portfolio</a></li>
+                      <a href="#" class="has-icon">Catalogo Unico</a>
+                      <ul class="sub-menu dropdown "><li class="title back js-generated"><h5><a href="javascript:void(0)">Back</a></h5></li><li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="#">Catalogo Unico</a></li>
                         <li id="menu-item-1303">
-                          <a href="single-portfolio.html" class="has-icon">Single Portfolio</a>
+                          <a href="single-portfolio.html" class="has-icon">Catalogo Unico</a>
                         </li>
                       </ul>
                     </li>
@@ -102,13 +102,13 @@
                       <a href="blog-columns.html" class="has-icon">Blog Columns</a>
                     </li>
                     <li id="menu-item-1297">
-                      <a href="single-blog.html" class="has-icon">Single Post</a>
+                      <a href="single-blog.html" class="has-icon">Post</a> Unico
                     </li>
                   </ul>
                 </li>
                 <li id="menu-item-1296" class="has-dropdown not-click">
-                  <a href="#" class="has-icon">Element</a>
-                  <ul class="sub-menu dropdown"><li class="title back js-generated"><h5><a href="javascript:void(0)">Back</a></h5></li><li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="#">Element</a></li>
+                  <a href="#" class="has-icon">Elemento</a>
+                  <ul class="sub-menu dropdown"><li class="title back js-generated"><h5><a href="javascript:void(0)">Back</a></h5></li><li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="#">Elemento</a></li>
                     <li id="menu-item-1312">
                       <a href="call-to-action.html" class="has-icon">Call To Action</a>
                     </li>
