implementações no index

--- a/index.html
+++ b/index.html
@@ -389,25 +389,25 @@
       <div class="row">
         <div class="small-12 large-6 columns">
           <div class="wd-title-section_l">
-            <h2>Our Clients</h2>
-            <h5>There are all awesome people</h5>
+            <h2>Nossos Clientes</h2>
+            <h5>Há pessoas incríveis</h5>
           </div>
           <div class="owl-testimonail wd-testimonail owl-carousel owl-theme">
             <blockquote>
-              <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry’s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-              <img src="http://via.placeholder.com/70x70" alt="testimonail">
+              <p>“Trabalhar é necessário, com o respeito e a união familiar é imprescindível” Luiz Antonio Donato filho.</p>
+              <img src="images/Leandro Coelho.jpg" alt="testimonail">
               <cite>John Harris</cite>
-              <div class="job-title"></div>
+              <div class="Leandro Coelho"></div>
             </blockquote>
             <blockquote>
-              <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry’s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-              <img src="http://via.placeholder.com/70x70" alt="testimonail">
+              <p>Nossa missão é produzir conteúdos isentos e disseminá-los, informando ao leitor tudo o que ocorre no mercado online, com o intuito de contribuir com o desenvolvimento do comércio eletrônico brasileiro..</p>
+              <img src="images/Leandro Coelho.jpg" alt="testimonail">
               <cite>Alex Joan</cite>
               <div class="job-title"></div>
             </blockquote>
             <blockquote>
-              <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry’s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-              <img src="http://via.placeholder.com/70x70" alt="testimonail">
+              <p>Embora oferecer aos seus clientes uma recompensa como incentivo para deixar uma avaliação funcione bem na maioria dos casos, isso pode não ser completamente necessário. Quem sabe um simples e-mail bem escrito possa ser a solução para receber avaliações de produto. Por isso, testei um e-mail sem nenhuma recompensa:.</p>
+              <img src="images/Leandro Coelho.jpg" alt="testimonail">
               <cite>Aleen Valzac</cite>
               <div class="job-title"></div>
             </blockquote>
@@ -415,23 +415,23 @@
         </div>
         <div class="small-12 large-6 columns">
           <div class="wd-title-section_l">
-            <h2>Get a Free Quote</h2>
-            <h5>Sed odio orci, fringilla nec dolor et, euismod auctor mauris. Curabitur semper dui diam, nec accumsan mauris consequat sed.</h5>
+            <h2>Obter uma Cotação Gratuita</h2>
+            <h5> com o propósito de ser simples de implementar, ter os melhores tempos de resposta, trabalhamos para previnir interrupções e nossas estatísticas de utilização são transparentes a todos! Precisamos da sua ajuda para manter o trabalho em excelência.</h5>
           </div>
           <div class="row full-width">
             <div class="small-12 large-6 columns">
               <span class="wpcf7-form-control-wrap your-name">
-                <input type="text" name="your-name" value="" size="40" class="wpcf7-form-control wpcf7-text wpcf7-validates-as-required" aria-required="true" aria-invalid="false" placeholder="Your Name">
+                <input type="text" name="your-name" value="" size="40" class="wpcf7-form-control wpcf7-text wpcf7-validates-as-required" aria-required="true" aria-invalid="false" placeholder="seu nome">
               </span>
             </div>
             <div class="small-12 large-6 columns">
               <span class="wpcf7-form-control-wrap your-email">
-                <input type="email" name="your-email" value="" size="40" class="wpcf7-form-control wpcf7-text wpcf7-email wpcf7-validates-as-required wpcf7-validates-as-email" aria-required="true" aria-invalid="false" placeholder="Your Email">
+                <input type="email" name="your-email" value="" size="40" class="wpcf7-form-control wpcf7-text wpcf7-email wpcf7-validates-as-required wpcf7-validates-as-email" aria-required="true" aria-invalid="false" placeholder="seu e-mail">
               </span>
             </div>
             <div class="small-12 large-12 columns">
               <span class="wpcf7-form-control-wrap message">
-                <textarea name="message" cols="10" rows="4" class="wpcf7-form-control wpcf7-textarea" aria-invalid="false" placeholder="Your message"></textarea>
+                <textarea name="message" cols="10" rows="4" class="wpcf7-form-control wpcf7-textarea" aria-invalid="false" placeholder="deixe sua mensagem"></textarea>
               </span>
             </div>
             <div class="small-12 large-12 columns">
@@ -451,7 +451,7 @@
       <div class="row">
         <div class="small-12 large-8 large-offset-2 columns">
           <div class="wd-title-section_c">
-            <h2>Our Latest News</h2>
+            <h2>Nossas últimas notícias</h2>
             <h5>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</h5>
           </div>
         </div>
@@ -462,35 +462,40 @@
             <li>
               <div class="wd-latest-news hvr-underline-from-center animated fadeInUp" data-animated="fadeInUp">
                 <div class="wd-image-date">
-                  <img width="368" height="193" src="http://via.placeholder.com/368x193" class="attachment-flooring_blog size-flooring_blog wp-post-image" alt="">              <span><strong>28</strong>Aug</span>
+                  <img width="368" height="193" src="images/ultimas noticias/acendedordecarvao.jpg" class="attachment-flooring_blog size-flooring_blog wp-post-image" alt="">              <span><strong>05</strong>Fev</span>
                 </div>
-                <h4 class="wd-title-element"><a href="single-blog.html">Dignissim phasellus ultrices tellus</a></h4>
+                <h4 class="wd-title-element"><a href="single-blog.html">Acendedor de carvão para Narguilé</a></h4>
                 <p>
-                  Sed odio orci, fringilla nec dolor et, euismod auctor mauris. Curabitur semper dui diam, nec accumsan mauris consequat sed. Interdum et malesuada fames ac ante…
-                  <a class="hvr-pop read-more" href="single-blog.html">Read More →</a>
+                  Agilidade e segurança para acender o carvão de fibra de coco do seu Narguilé.Não deixe que a falta de um equipamento adequado coloque em risco um momento de diversão com a família e amigos. 
+                  <a class="hvr-pop read-more" href="single-blog.html">Mais Sobre  →</a>
                 </p>
               </div>
             </li>
             <li>
               <div class="wd-latest-news hvr-underline-from-center animated fadeInUp" data-animated="fadeInUp">
                 <div class="wd-image-date">
-                  <img width="368" height="193" src="http://via.placeholder.com/368x193" class="attachment-flooring_blog size-flooring_blog wp-post-image" alt="">              <span><strong>28</strong>Aug</span>
+                  <img width="368" height="193" src="images/ultimas noticias/dirtysteak.jpg"" class="attachment-flooring_blog size-flooring_blog wp-post-image" alt="">              <span><strong>05</strong>Fev</span>
                 </div>
-                <h4 class="wd-title-element"><a href="single-blog.html">Excepteur sint occaecat cupidatat</a></h4>
+                <h4 class="wd-title-element"><a href="single-blog.html">Dirty Steak</a></h4>
                 <p>
-                  Sed odio orci, fringilla nec dolor et, euismod auctor mauris. Curabitur semper dui diam, nec accumsan mauris consequat sed. Interdum et malesuada fames ac ante…
-                  <a class="hvr-pop read-more" href="single-blog.html">Read More →</a>
+                  Já ouviu falar de darty steak?<p> é o cozimento sobre as brasas</p>
+                  <a class="hvr-pop read-more" href="single-blog.html">Mais Sobre→</a>
                 </p>
               </div>
             </li>
             <li>
               <div class="wd-latest-news hvr-underline-from-center animated fadeInUp" data-animated="fadeInUp">
                 <div class="wd-image-date">
-                  <img width="368" height="193" src="http://via.placeholder.com/368x193" class="attachment-flooring_blog size-flooring_blog wp-post-image" alt="">              <span><strong>28</strong>Aug</span>
+                  <img width="368" height="193" src="images/ultimas noticias/carvaofulkancoco.jpg" class="attachment-flooring_blog size-flooring_blog wp-post-image" alt="">              <span><strong>05</strong>Fev</span>
                 </div>
-                <h4 class="wd-title-element"><a href="single-blog.html">Aenean nonummy hendrerit mauris</a></h4>
+                <h4 class="wd-title-element"><a href="single-blog.html">Carvão Premium</a></h4>
                 <p>
-                  Sed odio orci, fringilla nec dolor et, euismod auctor mauris. Curabitur semper dui diam, nec accumsan mauris consequat sed. Interdum et malesuada fames ac ante…              <a class="hvr-pop read-more" href="single-blog.html">Read More →</a>
+                 Olha a galera pedindo Fulkan Coco Hexagonal
+                 <br>
+                 <br>
+                 <br>
+                 <br>
+                 <a class="hvr-pop read-more" href="single-blog.html">Mais Sobre  →</a>
                 </p>
               </div>
             </li>
