--- a/index.html
+++ b/index.html
@@ -514,29 +514,29 @@
           <li>
             <div class="textwidget">
               <div class="widget-logo">
-                <img alt="logo" src="images/logo-white.png">
-                <p>The Flooring inc. is the leader of floor installation and repair in the country sed diam nonumy eirmod tempor invidunt ut labore and efficient strategy.</p>
+                <img alt="logo" src="images/logo/logo-site-1.png">
+                <p>AlfaSuportel. é o líder em equipamentos e produtos alta qualidade.</p>
               </div>
             </div>
           </li>
         </ul>
         <ul class="block large-4 medium-4 columns animated fadeInRight" data-animated="fadeInRight">
           <li>
-            <h2 class="block-title">Get in Touch</h2>
+            <h2 class="block-title">Entrar em contato</h2>
             <div class="textwidget">
               <div class="widget-info">
                 <ul>
                   <li>
-                  <span><span>Phone:</span> +1 123 457 653</span>
+                  <span><span>TEL:</span> (11) 2511-2233</span>
                 </li>
                   <li>
-                  <span><span>Fax:</span> +1 496 457 654</span>
+                  <span><span>TEL:</span> (11) 2511-2144</span>
                 </li>
                   <li>
-                  <span><span>Email:</span> <a href="mailto:email@website.com">our-mail@example.com</a></span>
+                  <span><span>E-mail:</span> <a href="mailto:alfasuportel@alfasuportel.com.br">alfasuportel@alfasuportel.com.br</a></span>
                 </li>
                   <li>
-                  <span><span>Adress:</span> 121 King Street, Melbourne 3000 Australia</span>
+                  <span><span>endereço</span> Rua Nanci Ackel, 188, São Paulo - SP</span>
                 </li>
                 </ul>
               </div>
@@ -548,7 +548,7 @@
             <h2 class="block-title">Newsletter</h2>
             <div class="textwidget">
               <div class="wd-newsletter">
-                Sign up your newsletter
+                Assine seu boletim informativo
                 <div>
               <input type="text" class="email-adress" placeholder="EMAIL ADRESS" size="20" value="" name="email-adress">
               <input type="submit" class="newslettersubmit" value="GO">
@@ -577,16 +577,16 @@
           <div class="small-12 large-12 columns">
             <div class="copyright-menu">
               <ul id="menu-footer-menu" class="menu">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about-us.html">About Us</a></li>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="about-us.html">Quem Somos</a></li>
                 <li><a href="blog.html">Blog</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="contact.html">Contato</a></li>
               </ul>
             </div>
           </div>
           <div class="copyright small-12 large-12 columns">
             <p>
-              © 2017 Flooring All rights reserved.
+              © 2018 SDmarketingMobile All rights reserved.
             </p>
           </div>
         </div>
