atualização quem somos

--- a/about-us.html
+++ b/about-us.html
@@ -13,7 +13,8 @@
     <link rel="stylesheet" href="stylesheets/font-awesome/font-awesome.min.css">
     <link rel="stylesheet" href="stylesheets/app.css">
     <link rel="stylesheet" href="stylesheets/custom-style.css">
-    <link rel="icon" href="images/logo/logo-site-1.png" width="140" height="140">
+    <link rel="stylesheet" href="stylesheets/custom-style.css">
+    <link rel="icon" href="images/logo/logo alfa suportel .png" width="140" height="140">
   </head>
   <body>
 
@@ -25,8 +26,8 @@
           <ul class="title-area">
             <li class="name">
               <h1>
-                <a title="Flooring Company WordPress Theme" rel="home" href="index.html">
-                  <img alt="logo" src="images/logo/logo-site-1.png">
+                <a title="AlfaSuportel" rel="home" href="index.html">
+                  <img alt="logo" src="images/logo/logo alfa suportel .png">
                 </a>
               </h1>
             </li>
@@ -119,12 +120,12 @@
                       <a href="faq.html" class="has-icon">FAQ</a>
                     </li>
                     <li id="menu-item-1318">
-                      <a href="columns.html" class="has-icon">Columns</a>
+                      <a href="columns.html" class="has-icon">Contato</a>
                     </li>
                   </ul>
                 </li>
                 <li id="menu-item-1308">
-                <a href="contact.html" class="has-icon">Contact</a>
+                <a href="contact.html" class="has-icon">Contato</a>
               </li>
               </ul>
             </div>
@@ -140,7 +141,7 @@
     <section class="wd-title-bar">
       <div class="row">
         <div class="large-12 columns p-t-70 text-left">
-          <h2 id="page-title" class="title">About Us</h2>
+          <h2 id="page-title" class="title">Quem Somos</h2>
         </div>
       </div>
     </section>
@@ -153,8 +154,8 @@
       <div class="row">
         <div class="small-12 large-6 large-offset-3 columns">
           <div class="wd-title-section_c">
-            <h2>We Are Flooring Inc.</h2>
-            <h5>We repair your roof with passion</h5>
+            <h2>Nos Somos AlfaSuportel</h2>
+            <h5>Nos Fazemos e vendemos produtos para trabalho e lazer</h5>
           </div>
         </div>
       </div>
@@ -369,7 +370,7 @@
           <li>
             <div class="textwidget">
               <div class="widget-logo">
-                <img alt="logo" src="images/logo-white.png">
+                <img alt="logo" src="images/logo/logo alfa suportel .png">
                 <p>The Flooring inc. is the leader of floor installation and repair in the country sed diam nonumy eirmod tempor invidunt ut labore and efficient strategy.</p>
               </div>
             </div>
