--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
     <link rel="stylesheet" href="stylesheets/font-awesome/font-awesome.min.css">
     <link rel="stylesheet" href="stylesheets/app.css">
     <link rel="stylesheet" href="stylesheets/custom-style.css">
-    <link rel="stylesheet" href="stylesheets/custom-style.css">
-    <link rel="icon" href="images/logo/logo-site-1.png" width="140" height="140">
+    <link rel="icon" href="images/logo alfa suportel .png" width="140" height="140">
 
   </head>
   <body>
@@ -28,8 +27,8 @@
           <ul class="title-area">
             <li class="name">
               <h1>
-                <a title="Flooring Company WordPress Theme" rel="home" href="index.html">
-                  <img alt="logo" src="images/logo/logo-site-1.png">
+                <a title="alfasuportel" rel="home" href="index.html">
+                  <img alt="logo" width="auto" height="auto" src="images/logo/logo alfa suportel .png">
                 </a>
               </h1>
             </li>
@@ -452,7 +451,7 @@
         <div class="small-12 large-8 large-offset-2 columns">
           <div class="wd-title-section_c">
             <h2>Nossas últimas notícias</h2>
-            <h5>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</h5>
+            <h5>veja ultimas novidade de linha de produtos</h5>
           </div>
         </div>
       </div>
@@ -514,7 +513,7 @@
           <li>
             <div class="textwidget">
               <div class="widget-logo">
-                <img alt="logo" src="images/logo/logo-site-1.png">
+                <img alt="logo" src="images/logo/logo alfa suportel .png">
                 <p>AlfaSuportel. é o líder em equipamentos e produtos alta qualidade.</p>
               </div>
             </div>
@@ -552,19 +551,13 @@
                 <div>
               <input type="text" class="email-adress" placeholder="EMAIL ADRESS" size="20" value="" name="email-adress">
               <input type="submit" class="newslettersubmit" value="GO">
-              <ul class="inline-list">
-                <li class="flickr">
-                  <a href="http://www.flickr.com/#"><i class="fa fa-flickr"></i></a>
-                </li>
+              <ul class="inline-list">              
                 <li class="facebook">
-                  <a href="https://www.facebook.com/#"><i class="fa fa-facebook"></i></a>
+                  <a href="https://www.facebook.com/Alfasuportel/"><i class="fa fa-facebook"></i></a>
                 </li>
-                <li class="twitter">
-                  <a href="https://twitter.com/#"><i class="fa fa-twitter"></i></a>
-                </li>
-                <li class="vimeo">
-                  <a href="https://vimeo.com/#"><i class="fa fa-vimeo-square"></i></a>
-                </li>
+                <li class="instagram">
+                  <a href="https://www.instagram.com/explore/tags/alfasuportel/"><i class="fa fa-instagram"></i></a>
+                </li>                
               </ul>
             </div>
               </div>
